# choppah

./: CMakeLists.txt  DOCUMENTATION.md  HISTORY.md  README.md  choppah.jucer
Builds/LinuxMakefile/: Makefile  build_vst3_linux.sh
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/choppah.xcodeproj/: project.pbxproj
Builds/VisualStudio2017/: choppah.sln  choppah_SharedCode.vcxproj  choppah_SharedCode.vcxproj.filters  choppah_StandalonePlugin.vcxproj  choppah_VST3.vcxproj  choppah_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Ressources/config_files/: config.xml  skin.xml
Ressources/presets/: 0.xml  1.xml  99.xml
Ressources/scripts/: build_linux_vst3.sh  cmake_build_linux.sh  configure.sh  copy_plugin_data.sh  copy_plugin_data_linux.sh  copy_plugin_data_windows.cmd  git_update.sh  rebuild_linux_vst3.sh  rebuild_vst3_linux.sh
Ressources/skins/default/: skin.xml
Ressources/skins/gray/: skin.xml
Ressources/skins/green/: skin.xml
Ressources/skins/purple/: skin.xml
Ressources/skins/red/: skin.xml
Ressources/skins/turquoise/: skin.xml
Ressources/skins/yellow/: skin.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
